Fixed layer issue in sp-list.sp-card:hover due to extremely high z-index

--- a/src/4-molecules/cards/index.scss
+++ b/src/4-molecules/cards/index.scss
@@ -207,6 +207,7 @@
     position: relative;
     margin: 0;
     align-items: center;
+    z-index: 0;
 
     .sp-card-color-tag {
       top: 6px;
@@ -219,7 +220,7 @@
     }
 
     &:hover {
-      z-index: 100;
+      z-index: 1;
 
       .sp-card-thumbnail {
         width: 250px;
